# Db-Attribute

./: .gitignore  LICENSE  MANIFEST.in  connector.py  db_atribute.py  db_class.py  db_container.py  db_work.py  main.py  pyproject.toml  readme.md  requirements.txt  setup.py
db_atribute/: UserCollections(not used).py  UserCollections.py  UserSet.py  __init__.py  connector.py  db_class.py  db_work.py  dbtypes.py
db_attribute/: __init__.py  connector.py  db_class.py  db_types.py  db_work.py  discriptor.py
