[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db_attribute"
version = "2.1.1"
description = "DataBase attribute package"
readme = "readme.md"
requires-python = ">=3.9"
authors = [
    { name = "Shutkanos", email = "Shutkanos836926@mail.ru" }
]
license = { text = "MIT" }
keywords = ["db", "database", "attribute", "db_attribute", "db attribute", "DbAttribute", "database attribute"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    # Пример зависимостей (замените на свои)
    "mysql-connector-python >= 1.4",
    "orjson"
]

[project.urls]
Homepage = "https://github.com/shutkanos/Db-Attribute"
Documentation = "https://github.com/shutkanos/Db-Attribute#readme.md"
Repository = "https://github.com/shutkanos/Db-Attribute"

[tool.setuptools]
packages = ["db_attribute"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.toml", "LICENSE"]

[tool.setuptools.exclude-package-data]
"*" = [
    "*.egg-info",
    "PKG-INFO",
    "setup.cfg"
]
[tool.build]
no-clean = false